# Text2Trait

./: .gitignore  DEPLOYMENT.md  README.md  wsgi_t2tfe.py
dataset/: filtered_test_predictions.json  labels.json  prediction_finetuned-uie-epoch=0209-step=0000210.json  test.json  test_predictions.json
dataset/training_data/: dev.json  test_inference.json  train.json
gwas_backend/: dataset.json  papers_analysed.txt
gwas_frontend_app/src/: app.py  pyproject.toml
gwas_frontend_app/src/components/app/: sidebar_icons.py
gwas_frontend_app/src/components/results/: cytoscape_config.py  cytoscape_styles.py  layout_styles.py  ui_elements.py
gwas_frontend_app/src/data/: graph_edges.json  graph_nodes.json
gwas_frontend_app/src/pages/: home.py  index.py  questions.py  results.py
gwas_frontend_app/src/utils/: data_loader.py  search_NCBI.py  search_utils.py
utils/: convert_json_for_app.py  filter.py  pdf_to_sentences_json.py  pyproject.toml  split.py  stats.py  write_excel_to_json.py
utils/data_processing/: config.py  main.py  test_llm.py
utils/data_processing/data/input_excels/: Carolina_GWAS training data.xlsx  Chris_O'Bryan_Ontologies_training_data.xlsx  KS_Ontologies_training_data.xlsx  MCzaplejewicz Ontologies.xlsx  Wim_Ontologies_training_data.xlsx  XL_Ontologies_training_data.xlsx
utils/data_processing/data/output/: graph_nodes.json  master_triplets.jsonl  master_triplets_filtered.jsonl  master_triplets_filtered_array.json
utils/data_processing/pipeline/: excel_reader.py  filter.py  graph_builder.py  json_writer.py  llm_predictor.py  pdf_reader.py
(+97 files in other folders)
